Cambio de color azul a negro

--- a/resources/sass/material-dashboard/variables/_brand.scss
+++ b/resources/sass/material-dashboard/variables/_brand.scss
@@ -3,9 +3,9 @@
 
 /*     brand Colors              */
 /*#00BED6*/
-$brand-primary:              #00BED6 !default;
-$brand-info:                 $cyan-500 !default;
-$brand-success:              $orange-500 !default;
+$brand-primary:              $black-color !default;
+$brand-info:                 $black-color !default;
+$brand-success:              $green-500 !default;
 $brand-warning:              $purple-500 !default;
 $brand-danger:               $red-500 !default;
 $brand-rose:                 $pink-500 !default;
