--- a/resources/sass/material-dashboard.scss
+++ b/resources/sass/material-dashboard.scss
@@ -40,6 +40,7 @@
  @import "material-dashboard/tables";
  @import "material-dashboard/misc";
  @import "material-dashboard/social-buttons";
+ @import "material-dashboard/viabilidad";
 
 @import "material-dashboard/cards";
 @import "material-dashboard/cards/card-stats";
