vista de caracterizacion y arreglo campos base de datos

--- a/resources/sass/material-dashboard/_viabilidad.scss
+++ b/resources/sass/material-dashboard/_viabilidad.scss
@@ -1,25 +1,25 @@
-a.nav-link.viabilidad-tp {
+.viabilidad-tp {
     background: #47bb6b !important;
     color: white !important;
     font-weight: 500;
 }
 
-a.nav-link.viabilidad-sst {
+.viabilidad-sst {
     background: #ccbc4b !important;
     color: white !important;
     font-weight: 500;
 }
-a.nav-link.viabilidad-tele {
+.viabilidad-tele {
     background: #CC99FF !important;
     color: white !important;
     font-weight: 500;
 }
-a.nav-link.viabilidad-tec {
+.viabilidad-tec {
     background: #2f8be0 !important;
     color: white !important;
     font-weight: 500;
 }
-a.nav-link.viabilidad-sin {
+.viabilidad-sin {
     background: #FFFFFF !important;
     color: black !important;
     font-weight: 500;
