--- a/public/css/material-dashboard.css
+++ b/public/css/material-dashboard.css
@@ -15296,7 +15296,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   bottom: 0;
   left: 0;
   z-index: 2;
-  width: 369px;
+  width: 260px;
   background: #fff;
   box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
@@ -15321,7 +15321,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   position: relative;
   height: calc(100vh);
   overflow: auto;
-  width: 369px;
+  width: 260px;
   z-index: 4;
   background-color: #13161b;
   padding-bottom: 30px;
@@ -15700,7 +15700,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 .main-panel {
   position: relative;
   float: right;
-  width: calc(100% - 369px);
+  width: calc(100% - 260px);
   transition: 0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
 
@@ -15788,7 +15788,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   }
 
   .sidebar-mini .sidebar:hover {
-    width: 369px;
+    width: 260px;
   }
 
   .sidebar-mini .sidebar:hover .logo a.logo-normal {
@@ -17423,31 +17423,31 @@ label {
   color: #55acee;
 }
 
-a.nav-link.viabilidad-tp {
+.viabilidad-tp {
   background: #47bb6b !important;
   color: white !important;
   font-weight: 500;
 }
 
-a.nav-link.viabilidad-sst {
+.viabilidad-sst {
   background: #ccbc4b !important;
   color: white !important;
   font-weight: 500;
 }
 
-a.nav-link.viabilidad-tele {
+.viabilidad-tele {
   background: #CC99FF !important;
   color: white !important;
   font-weight: 500;
 }
 
-a.nav-link.viabilidad-tec {
+.viabilidad-tec {
   background: #2f8be0 !important;
   color: white !important;
   font-weight: 500;
 }
 
-a.nav-link.viabilidad-sin {
+.viabilidad-sin {
   background: #FFFFFF !important;
   color: black !important;
   font-weight: 500;
@@ -18953,14 +18953,14 @@ Copyright (c) 2015 Daniel Eden
   .nav-open .menu-on-left .main-panel,
   .nav-open .menu-on-left .wrapper-full-page,
   .nav-open .menu-on-left .navbar-fixed > div {
-    transform: translate3d(369px, 0, 0);
+    transform: translate3d(260px, 0, 0);
   }
 
   .menu-on-left .sidebar,
   .menu-on-left .off-canvas-sidebar {
     left: 0;
     right: auto;
-    transform: translate3d(-369px, 0, 0);
+    transform: translate3d(-260px, 0, 0);
   }
 
   .menu-on-left .close-layer {
@@ -19099,7 +19099,7 @@ Copyright (c) 2015 Daniel Eden
   .nav-open .navbar .container .navbar-wrapper,
   .nav-open .navbar .container {
     left: 0;
-    transform: translate3d(-369px, 0, 0);
+    transform: translate3d(-260px, 0, 0);
   }
 
   .nav-open .sidebar {
@@ -19161,7 +19161,7 @@ Copyright (c) 2015 Daniel Eden
     display: block;
     top: 0;
     height: 100vh;
-    width: 369px;
+    width: 260px;
     right: 0;
     left: auto;
     z-index: 1032;
@@ -19172,7 +19172,7 @@ Copyright (c) 2015 Daniel Eden
     text-align: left;
     padding-right: 0px;
     padding-left: 0;
-    transform: translate3d(369px, 0, 0);
+    transform: translate3d(260px, 0, 0);
     transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
 
@@ -19565,7 +19565,7 @@ Copyright (c) 2015 Daniel Eden
     opacity: 0;
     top: 0;
     left: auto;
-    right: 369px;
+    right: 260px;
     content: "";
     z-index: 9999;
     overflow-x: hidden;
