I012 Cambiar color a nota de confidencialidad

--- a/public/css/material-dashboard.css
+++ b/public/css/material-dashboard.css
@@ -17464,7 +17464,7 @@ a.nav-link.usuarios-inactivos {
 }
 
 #ofBar {
-  background: #de2e2e;
+  background: #909090;
   text-align: justify;
   z-index: 999999999;
   font-size: 16px;
