--- a/resources/sass/material-dashboard/_viabilidad.scss
+++ b/resources/sass/material-dashboard/_viabilidad.scss
@@ -36,16 +36,16 @@ a.nav-link.usuarios-inactivos {
 
 }
 
-#ofBar{
-    background: #de2e2e;
-    text-align: justify;
-    z-index: 999999999;
-    font-size: 16px;
-    color: #fff;
-    padding: 18px 5%;
-    font-weight: 400;
-    display: block;
-    position: relative;
-    top: 0px;
-    box-shadow: 0 6px 13px -4px rgba(0, 0, 0, 0.25);
+#ofBar {
+  background: #909090;
+  text-align: justify;
+  z-index: 999999999;
+  font-size: 16px;
+  color: #fff;
+  padding: 18px 5%;
+  font-weight: 400;
+  display: block;
+  position: relative;
+  top: 0px;
+  box-shadow: 0 6px 13px -4px rgba(0, 0, 0, 0.25);
 }
