--- a/public/css/material-dashboard.css
+++ b/public/css/material-dashboard.css
@@ -17091,6 +17091,23 @@ thead.thead-inverse th,
   padding: 5px !important;
 }
 
+.tableFixHead {
+  overflow-y: auto;
+  height: 70vh;
+}
+
+.tableFixHead thead th {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 90;
+}
+
+th {
+  background-color: #ffffff;
+  border-bottom: 1px solid black;
+}
+
 body {
   background-color: #eee;
   color: #3C4858;
