--- a/public/css/material-dashboard.css
+++ b/public/css/material-dashboard.css
@@ -17494,6 +17494,22 @@ a.nav-link.usuarios-inactivos {
   box-shadow: 0 6px 13px -4px rgba(0, 0, 0, 0.25);
 }
 
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+  border-radius: 12px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.72, #6c757d), color-stop(0.86, #3c4858));
+}
+
 .card {
   border: 0;
   margin-bottom: 30px;
