--- a/resources/sass/material-dashboard/_viabilidad.scss
+++ b/resources/sass/material-dashboard/_viabilidad.scss
@@ -49,3 +49,25 @@ a.nav-link.usuarios-inactivos {
   top: 0px;
   box-shadow: 0 6px 13px -4px rgba(0, 0, 0, 0.25);
 }
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 12px;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.72, rgb(108,117,125)),
+									   color-stop(0.86, rgb(60,72,88)));
+}
